--- a/index.html
+++ b/index.html
@@ -691,7 +691,7 @@ Let’s connect and collaborate on something impactful.
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Visual Studio and Debugging, ServiceNow,GitHub,</h5>
+                <h5 class="h5">Visual Studio and Debugging, ServiceNow</h5>
                 <data value="90">90%</data>
               </div>
 
